FIX: Uneven button size

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   justify-content: flex-end;
   word-wrap: break-word;
   word-break: break-all;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .buttons {
@@ -44,7 +45,11 @@ body {
 }
 
 button {
-  padding: 20px;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
   border: none;
   border-radius: 5px;
